--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="course-project" class="section level2">
-<h2>Course Project</h2>
+<div id="course-project-iot-device" class="section level2">
+<h2>Course Project, IOT Device</h2>
 <p>This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
 <p>When you click the <strong>Knit</strong> button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:</p>
 <pre class="r"><code>summary(cars)</code></pre>
